# CryoLike

./: .gitignore  .readthedocs.yaml  LICENSE.md  README.md  pyproject.toml
benchmark/: benchmark_cross_correlation_likelihood.py  benchmark_fixtures.py
docs/: requirements.txt
docs/source/: about.rst  api.rst  conf.py  first-steps.rst  index.rst  installation.rst  usage.rst
docs/source/concepts/: file_structure.rst  formats.rst  imageConversion.rst  imageSettings.rst  likelihoodComputation.rst  overview.rst  templateCreation.rst
example/: combine_likelihoods_example.py  convert_particle_stacks_example.py  get_loglike_example.py  make_templates_from_inputs_example.py  plot_example.py  postprocess_example.py  run_likelihood_example.py  set_image_parameters_example.py
src/cryolike/: __init__.py  array.py  atomic_model.py  cartesian_grid.py  convert_particle_stacks.py  cross_correlation_likelihood.py  ctf.py  displacement.py  image.py  likelihood.py  make_templates_from_inputs.py  nufft.py  parameters.py  plot.py  polar_grid.py  run_likelihood.py  run_likelihood_batch.py  sphere_grid.py  star_file.py  template.py  variance_scaling.py  viewing_angles.py  volume.py
test/data/: ctf.mrc  ctf_cs_corrected.mrc  particles_out.star  relion_style_particles.star  templates.mrc
test/helpers/: helpers.py
test/integration/: test_cross_correlation.py  test_displacement.py  test_distance.py  test_likelihood.py
test/unit/: conftest.py  test_cartesian_grid.py  test_nufft_2d.py  test_nufft_3d.py  test_polar_grid.py  test_polar_grid_fixtures.py  test_star_file.py
(+155 files in other folders)
